--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "my-postgres-app",
   "version": "1.0.0",
-  "description": "A Node.js application using the pg module for PostgreSQL database interactions",
+  "description": "A Node.js application using various dependencies including pg for PostgreSQL",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "pg": "^8.11.0" 
+    "express": "^4.18.2",          
+    "formidable": "^3.2.0",        
+    "pg": "^8.11.0",               
+    "cors": "^2.8.5",              
+    "axios": "^1.5.0",         
+    "multer": "^1.4.5",          
+    "telegraf": "^4.11.0"       
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=14.0.0"  // Specify the required Node.js version
   },
   "author": "",
   "license": "ISC"
