--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "telegraf": "^4.11.0"       
   },
   "engines": {
-    "node": ">=14.0.0"  // Specify the required Node.js version
+    "node": ">=14.0.0" 
   },
   "author": "",
   "license": "ISC"
