--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",          
-    "formidable": "^3.2.0",        
-    "pg": "^8.11.0",               
-    "cors": "^2.8.5",              
-    "axios": "^1.5.0",         
-    "multer": "^1.4.5",          
-    "telegraf": "^4.11.0"       
+    "express": "",
+    "formidable": "",
+    "pg": "",
+    "cors": "",
+    "axios": "",
+    "multer": "",
+    "telegraf": ""
   },
   "engines": {
-    "node": ">=14.0.0" 
+    "node": ">=14.0.0"  
   },
   "author": "",
   "license": "ISC"
